vscode-extension/server/src/antlr/SchedulerParser.ts
// Generated from ./src/antlr/Scheduler.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SchedulerListener } from "./SchedulerListener";
import { SchedulerVisitor } from "./SchedulerVisitor";


export class SchedulerParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly CLASS_ATTRIBUTE = 4;
	public static readonly TYPENAME = 5;
	public static readonly CLASSNAME = 6;
	public static readonly DAYNAME = 7;
	public static readonly CLASSESTOKEN = 8;
	public static readonly DAYSTOKEN = 9;
	public static readonly MULTIPLY = 10;
	public static readonly DIVIDE = 11;
	public static readonly ADD = 12;
	public static readonly SUBTRACT = 13;
	public static readonly EQUAL = 14;
	public static readonly NOT_EQUAL = 15;
	public static readonly LESS_THAN = 16;
	public static readonly GREATER_THAN = 17;
	public static readonly LESS_THAN_OR_EQUAL = 18;
	public static readonly GREATER_THAN_OR_EQUAL = 19;
	public static readonly AND = 20;
	public static readonly OR = 21;
	public static readonly NOT = 22;
	public static readonly IN = 23;
	public static readonly OVERLAP = 24;
	public static readonly OPEN_PAREN = 25;
	public static readonly CLOSE_PAREN = 26;
	public static readonly OPEN_BRACKET = 27;
	public static readonly CLOSE_BRACKET = 28;
	public static readonly DOT = 29;
	public static readonly COMMA = 30;
	public static readonly COLON = 31;
	public static readonly SINGLEEQUAL = 32;
	public static readonly COLLECTION_OF = 33;
	public static readonly ADD_CANVA = 34;
	public static readonly UPDATE_CANVA = 35;
	public static readonly DELETE_CANVA = 36;
	public static readonly GET_CANVA = 37;
	public static readonly WHERE = 38;
	public static readonly SATISFYING = 39;
	public static readonly AT = 40;
	public static readonly ON = 41;
	public static readonly DEF = 42;
	public static readonly IF = 43;
	public static readonly ELIF = 44;
	public static readonly ELSE = 45;
	public static readonly FOR = 46;
	public static readonly WHILE = 47;
	public static readonly RETURN = 48;
	public static readonly BREAK = 49;
	public static readonly OPEN_CURLY = 50;
	public static readonly CLOSE_CURLY = 51;
	public static readonly DISTINCT = 52;
	public static readonly PRINT = 53;
	public static readonly DATESTOKEN = 54;
	public static readonly LOADTOKEN = 55;
	public static readonly DUMPTOKEN = 56;
	public static readonly INT = 57;
	public static readonly BOOL = 58;
	public static readonly STRING = 59;
	public static readonly DATE = 60;
	public static readonly TIME = 61;
	public static readonly WS = 62;
	public static readonly VARNAME = 63;
	public static readonly COMMENT_LINE = 64;
	public static readonly COMMENT = 65;
	public static readonly RULE_prog = 0;
	public static readonly RULE_code = 1;
	public static readonly RULE_instruction = 2;
	public static readonly RULE_instruction_without_semicolon = 3;
	public static readonly RULE_canvas_instruction = 4;
	public static readonly RULE_block = 5;
	public static readonly RULE_print = 6;
	public static readonly RULE_load = 7;
	public static readonly RULE_dump = 8;
	public static readonly RULE_file_path = 9;
	public static readonly RULE_add = 10;
	public static readonly RULE_update = 11;
	public static readonly RULE_delete = 12;
	public static readonly RULE_get = 13;
	public static readonly RULE_start_date = 14;
	public static readonly RULE_end_date = 15;
	public static readonly RULE_transfer_statement = 16;
	public static readonly RULE_loop = 17;
	public static readonly RULE_for_loop = 18;
	public static readonly RULE_while_loop = 19;
	public static readonly RULE_if_statement = 20;
	public static readonly RULE_condition = 21;
	public static readonly RULE_function = 22;
	public static readonly RULE_args = 23;
	public static readonly RULE_arg = 24;
	public static readonly RULE_func_call = 25;
	public static readonly RULE_def = 26;
	public static readonly RULE_classDef = 27;
	public static readonly RULE_dayDef = 28;
	public static readonly RULE_assign = 29;
	public static readonly RULE_attribute = 30;
	public static readonly RULE_attribute_call = 31;
	public static readonly RULE_day_attribute = 32;
	public static readonly RULE_collection = 33;
	public static readonly RULE_collection_elements = 34;
	public static readonly RULE_collection_element = 35;
	public static readonly RULE_collection_subscription = 36;
	public static readonly RULE_expr = 37;
	public static readonly RULE_type = 38;
	public static readonly RULE_structure = 39;
	public static readonly RULE_value = 40;
	public static readonly RULE_comments = 41;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"prog", "code", "instruction", "instruction_without_semicolon", "canvas_instruction", 
		"block", "print", "load", "dump", "file_path", "add", "update", "delete", 
		"get", "start_date", "end_date", "transfer_statement", "loop", "for_loop", 
		"while_loop", "if_statement", "condition", "function", "args", "arg", 
		"func_call", "def", "classDef", "dayDef", "assign", "attribute", "attribute_call", 
		"day_attribute", "collection", "collection_elements", "collection_element", 
		"collection_subscription", "expr", "type", "structure", "value", "comments",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "';'", "'START DATE'", "'END DATE'", undefined, undefined, 
		"'CLASS'", "'DAY'", "'CLASSES'", "'DAYS'", "'*'", "'/'", "'+'", "'-'", 
		"'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'AND'", "'OR'", "'NOT'", 
		"'IN'", "'@'", "'('", "')'", "'['", "']'", "'.'", "','", "':'", "'='", 
		"'COLLECTION OF'", "'ADD'", "'UPDATE'", "'DELETE'", "'GET'", "'WHERE'", 
		"'SATISFYING'", "'AT'", "'ON'", "'DEF'", "'IF'", "'ELIF'", "'ELSE'", "'FOR'", 
		"'WHILE'", "'RETURN'", "'BREAK'", "'{'", "'}'", "'DISTINCT'", "'PRINT'", 
		"'DATES'", "'LOAD'", "'DUMP'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, "CLASS_ATTRIBUTE", "TYPENAME", 
		"CLASSNAME", "DAYNAME", "CLASSESTOKEN", "DAYSTOKEN", "MULTIPLY", "DIVIDE", 
		"ADD", "SUBTRACT", "EQUAL", "NOT_EQUAL", "LESS_THAN", "GREATER_THAN", 
		"LESS_THAN_OR_EQUAL", "GREATER_THAN_OR_EQUAL", "AND", "OR", "NOT", "IN", 
		"OVERLAP", "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACKET", "CLOSE_BRACKET", 
		"DOT", "COMMA", "COLON", "SINGLEEQUAL", "COLLECTION_OF", "ADD_CANVA", 
		"UPDATE_CANVA", "DELETE_CANVA", "GET_CANVA", "WHERE", "SATISFYING", "AT", 
		"ON", "DEF", "IF", "ELIF", "ELSE", "FOR", "WHILE", "RETURN", "BREAK", 
		"OPEN_CURLY", "CLOSE_CURLY", "DISTINCT", "PRINT", "DATESTOKEN", "LOADTOKEN", 
		"DUMPTOKEN", "INT", "BOOL", "STRING", "DATE", "TIME", "WS", "VARNAME", 
		"COMMENT_LINE", "COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SchedulerParser._LITERAL_NAMES, SchedulerParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SchedulerParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Scheduler.g4"; }

	// @Override
	public get ruleNames(): string[] { return SchedulerParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SchedulerParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SchedulerParser._ATN, this);
	}
	// @RuleVersion(0)
	public prog(): ProgContext {
		let _localctx: ProgContext = new ProgContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SchedulerParser.RULE_prog);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 85;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 2)) & ~0x1F) === 0 && ((1 << (_la - 2)) & ((1 << (SchedulerParser.T__1 - 2)) | (1 << (SchedulerParser.T__2 - 2)) | (1 << (SchedulerParser.TYPENAME - 2)) | (1 << (SchedulerParser.CLASSNAME - 2)) | (1 << (SchedulerParser.DAYNAME - 2)) | (1 << (SchedulerParser.NOT - 2)) | (1 << (SchedulerParser.OPEN_PAREN - 2)) | (1 << (SchedulerParser.OPEN_BRACKET - 2)) | (1 << (SchedulerParser.COLLECTION_OF - 2)))) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (SchedulerParser.ADD_CANVA - 34)) | (1 << (SchedulerParser.UPDATE_CANVA - 34)) | (1 << (SchedulerParser.DELETE_CANVA - 34)) | (1 << (SchedulerParser.GET_CANVA - 34)) | (1 << (SchedulerParser.IF - 34)) | (1 << (SchedulerParser.FOR - 34)) | (1 << (SchedulerParser.WHILE - 34)) | (1 << (SchedulerParser.RETURN - 34)) | (1 << (SchedulerParser.BREAK - 34)) | (1 << (SchedulerParser.PRINT - 34)) | (1 << (SchedulerParser.LOADTOKEN - 34)) | (1 << (SchedulerParser.DUMPTOKEN - 34)) | (1 << (SchedulerParser.INT - 34)) | (1 << (SchedulerParser.BOOL - 34)) | (1 << (SchedulerParser.STRING - 34)) | (1 << (SchedulerParser.DATE - 34)) | (1 << (SchedulerParser.TIME - 34)) | (1 << (SchedulerParser.VARNAME - 34)) | (1 << (SchedulerParser.COMMENT_LINE - 34)) | (1 << (SchedulerParser.COMMENT - 34)))) !== 0)) {
				{
				this.state = 84;
				this.code();
				}
			}

			this.state = 87;
			this.match(SchedulerParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public code(): CodeContext {
		let _localctx: CodeContext = new CodeContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, SchedulerParser.RULE_code);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 97;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 97;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
				case 1:
					{
					this.state = 91;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
					case 1:
						{
						this.state = 89;
						this.instruction();
						}
						break;

					case 2:
						{
						this.state = 90;
						this.canvas_instruction();
						}
						break;
					}
					this.state = 93;
					this.match(SchedulerParser.T__0);
					}
					break;

				case 2:
					{
					this.state = 95;
					this.instruction_without_semicolon();
					}
					break;

				case 3:
					{
					this.state = 96;
					this.comments();
					}
					break;
				}
				}
				this.state = 99;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (((((_la - 2)) & ~0x1F) === 0 && ((1 << (_la - 2)) & ((1 << (SchedulerParser.T__1 - 2)) | (1 << (SchedulerParser.T__2 - 2)) | (1 << (SchedulerParser.TYPENAME - 2)) | (1 << (SchedulerParser.CLASSNAME - 2)) | (1 << (SchedulerParser.DAYNAME - 2)) | (1 << (SchedulerParser.NOT - 2)) | (1 << (SchedulerParser.OPEN_PAREN - 2)) | (1 << (SchedulerParser.OPEN_BRACKET - 2)) | (1 << (SchedulerParser.COLLECTION_OF - 2)))) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (SchedulerParser.ADD_CANVA - 34)) | (1 << (SchedulerParser.UPDATE_CANVA - 34)) | (1 << (SchedulerParser.DELETE_CANVA - 34)) | (1 << (SchedulerParser.GET_CANVA - 34)) | (1 << (SchedulerParser.IF - 34)) | (1 << (SchedulerParser.FOR - 34)) | (1 << (SchedulerParser.WHILE - 34)) | (1 << (SchedulerParser.RETURN - 34)) | (1 << (SchedulerParser.BREAK - 34)) | (1 << (SchedulerParser.PRINT - 34)) | (1 << (SchedulerParser.LOADTOKEN - 34)) | (1 << (SchedulerParser.DUMPTOKEN - 34)) | (1 << (SchedulerParser.INT - 34)) | (1 << (SchedulerParser.BOOL - 34)) | (1 << (SchedulerParser.STRING - 34)) | (1 << (SchedulerParser.DATE - 34)) | (1 << (SchedulerParser.TIME - 34)) | (1 << (SchedulerParser.VARNAME - 34)) | (1 << (SchedulerParser.COMMENT_LINE - 34)) | (1 << (SchedulerParser.COMMENT - 34)))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public instruction(): InstructionContext {
		let _localctx: InstructionContext = new InstructionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SchedulerParser.RULE_instruction);
		try {
			this.state = 106;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 101;
				this.def();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 102;
				this.assign();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 103;
				this.expr(0);
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 104;
				this.transfer_statement();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 105;
				this.print();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public instruction_without_semicolon(): Instruction_without_semicolonContext {
		let _localctx: Instruction_without_semicolonContext = new Instruction_without_semicolonContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SchedulerParser.RULE_instruction_without_semicolon);
		try {
			this.state = 111;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SchedulerParser.IF:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 108;
				this.if_statement();
				}
				break;
			case SchedulerParser.TYPENAME:
			case SchedulerParser.CLASSNAME:
			case SchedulerParser.DAYNAME:
			case SchedulerParser.COLLECTION_OF:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 109;
				this.function();
				}
				break;
			case SchedulerParser.FOR:
			case SchedulerParser.WHILE:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 110;
				this.loop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public canvas_instruction(): Canvas_instructionContext {
		let _localctx: Canvas_instructionContext = new Canvas_instructionContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, SchedulerParser.RULE_canvas_instruction);
		try {
			this.state = 121;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SchedulerParser.ADD_CANVA:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 113;
				this.add();
				}
				break;
			case SchedulerParser.UPDATE_CANVA:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 114;
				this.update();
				}
				break;
			case SchedulerParser.DELETE_CANVA:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 115;
				this.delete();
				}
				break;
			case SchedulerParser.GET_CANVA:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 116;
				this.get();
				}
				break;
			case SchedulerParser.T__1:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 117;
				this.start_date();
				}
				break;
			case SchedulerParser.T__2:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 118;
				this.end_date();
				}
				break;
			case SchedulerParser.LOADTOKEN:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 119;
				this.load();
				}
				break;
			case SchedulerParser.DUMPTOKEN:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 120;
				this.dump();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, SchedulerParser.RULE_block);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 123;
			this.match(SchedulerParser.OPEN_CURLY);
			this.state = 124;
			this.code();
			this.state = 125;
			this.match(SchedulerParser.CLOSE_CURLY);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public print(): PrintContext {
		let _localctx: PrintContext = new PrintContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, SchedulerParser.RULE_print);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 127;
			this.match(SchedulerParser.PRINT);
			this.state = 128;
			this.expr(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public load(): LoadContext {
		let _localctx: LoadContext = new LoadContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, SchedulerParser.RULE_load);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 130;
			this.match(SchedulerParser.LOADTOKEN);
			this.state = 131;
			this.file_path();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public dump(): DumpContext {
		let _localctx: DumpContext = new DumpContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, SchedulerParser.RULE_dump);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this.match(SchedulerParser.DUMPTOKEN);
			this.state = 134;
			this.file_path();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public file_path(): File_pathContext {
		let _localctx: File_pathContext = new File_pathContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, SchedulerParser.RULE_file_path);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 136;
			this.expr(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public add(): AddContext {
		let _localctx: AddContext = new AddContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, SchedulerParser.RULE_add);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 138;
			this.match(SchedulerParser.ADD_CANVA);
			this.state = 152;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				{
				this.state = 139;
				this.structure();
				this.state = 150;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 10, this._ctx) ) {
				case 1:
					{
					this.state = 140;
					this.expr(0);
					this.state = 148;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
					case 1:
						{
						this.state = 141;
						this.match(SchedulerParser.ON);
						this.state = 146;
						this._errHandler.sync(this);
						switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
						case 1:
							{
							this.state = 142;
							_la = this._input.LA(1);
							if (!(_la === SchedulerParser.TYPENAME || _la === SchedulerParser.DATESTOKEN)) {
							this._errHandler.recoverInline(this);
							} else {
								if (this._input.LA(1) === Token.EOF) {
									this.matchedEOF = true;
								}

								this._errHandler.reportMatch(this);
								this.consume();
							}
							this.state = 144;
							this._errHandler.sync(this);
							switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
							case 1:
								{
								this.state = 143;
								this.expr(0);
								}
								break;
							}
							}
							break;
						}
						}
						break;
					}
					}
					break;
				}
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public update(): UpdateContext {
		let _localctx: UpdateContext = new UpdateContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, SchedulerParser.RULE_update);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 154;
			this.match(SchedulerParser.UPDATE_CANVA);
			this.state = 163;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 14, this._ctx) ) {
			case 1:
				{
				this.state = 155;
				this.match(SchedulerParser.DATE);
				this.state = 157;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 12, this._ctx) ) {
				case 1:
					{
					this.state = 156;
					this.expr(0);
					}
					break;
				}
				}
				break;
